# tt-station

./: .gitignore  AGENTS.md  BOX_TELEMETRY_VALIDATION.md  CLAUDE.md  CONTEXT.md  Cargo.toml  MACOS_OPENWEBUI_LAUNCH.md  MACOS_PAIRING_CHECK.md  MACOS_TELEMETRY_CONNECTIONS.md  README.md  TESTING.md  TT_TOPLIKE_STREAM.md  build-deb.sh  rust-toolchain.toml
.github/workflows/: ci.yml  deploy-site.yml  macos-release.yml  release.yml
box-panel/: README.md  agentd.example.toml  com.tenstorrent.ttstation.panel.desktop  panel_launchers.py  test_panel_launchers.py  tt-station-panel.py  tt-station-panel.wrapper
crates/libttstation/: Cargo.toml
crates/libttstation/src/: agent_client.rs  catalog.rs  lib.rs  model.rs  pairing.rs  secrets.rs  wol.rs
crates/libttstation/src/discovery/: manual.rs  mdns.rs  mod.rs
crates/libttstation/tests/: agent_client.rs  mdns_integration.rs  pairing_client.rs
crates/mock-box/: Cargo.toml
crates/mock-box/src/: main.rs
crates/tt/: Cargo.toml
crates/tt-station-agentd/: Cargo.toml
crates/tt-station-agentd/src/: authkeys.rs  config.rs  device.rs  inference.rs  lib.rs  logs.rs  main.rs  net.rs  pairing.rs  power.rs  procscan.rs  routes.rs  telemetry.rs
crates/tt-station-agentd/src/serving/: discovery.rs  docker.rs  dstack.rs  mod.rs  runpy.rs
crates/tt-station-agentd/tests/: config.rs  control.rs  logs.rs  logs_stream.rs  models.rs  pairing.rs  reset.rs  runpy.rs  serving.rs  ssh_authorize.rs  status.rs  telemetry.rs  telemetry_enrich.rs  token_persistence.rs
crates/tt-station-agentd/tests/support/: mod.rs
crates/tt/src/: catalog.rs  main.rs  ssh.rs
crates/tt/src/console/: actions.rs  env.rs  mod.rs  names.rs  state.rs  ui.rs
crates/tt/tests/: console_snapshot.rs  e2e_mock.rs
crates/tt/tests/fixtures/: compatibility.json
debian/: changelog  control  copyright  rules  tt-station.conffiles  tt-station.postrm
deploy/: tt-station-agentd.package.service  tt-station-agentd.service  tt-station-power.rules
docs/: client-agent-integration-findings.md  security-faq.md  tt-studio-integration.md
docs/design/: isolated-chips-per-user.md
docs/reference/: agentd-config.md  logs.md  power-controls.md  tt-console.md  tt-inference-server-docker.md
docs/superpowers/: cleanup-analysis.md
docs/superpowers/plans/: 2026-07-02-tt-station-poc.md  2026-07-03-tt-station-connect-launchers.md  2026-07-03-tt-station-macos-menubar-app.md  2026-07-04-tt-station-box-workbench.md  2026-07-04-tt-station-window-surface.md  2026-07-05-agentd-config-profiles.md  2026-07-05-keyless-ssh-on-pairing.md  2026-07-05-model-catalog-experimental-p150.md  2026-07-05-telemetry-tt-toplike-processes.md  2026-07-05-tt-console-operator-tui.md  2026-07-05-ttstation-native-redesign.md  2026-07-06-thin-telemetry-dashboard.md  2026-07-06-window-action-bar-model-list-polish.md  2026-07-07-log-viewing.md  2026-07-09-macos-release-installer.md  2026-07-10-gtk-panel-connect-launchers.md  2026-07-10-linux-deb-packaging.md  2026-07-15-box-power-controls.md
docs/superpowers/specs/: 2026-07-02-tt-station-poc-design.md  2026-07-03-tt-station-connect-launchers-design.md  2026-07-03-tt-station-macos-menubar-app-design.md  2026-07-04-tt-station-box-workbench-design.md  2026-07-04-tt-station-window-surface-design.md  2026-07-05-agentd-config-profiles-design.md  2026-07-05-keyless-ssh-on-pairing-design.md  2026-07-05-model-catalog-experimental-p150-design.md  2026-07-05-telemetry-tt-toplike-processes-design.md  2026-07-05-tt-console-operator-tui-design.md  2026-07-05-ttstation-native-redesign-design.md  2026-07-06-thin-telemetry-dashboard-design.md  2026-07-06-window-action-bar-model-list-polish-design.md  2026-07-07-log-viewing-design.md  2026-07-09-macos-release-installer-design.md  2026-07-10-deb-prerelease-ci-design.md  2026-07-10-linux-packaging-and-panel-launchers-design.md  2026-07-15-box-power-controls-design.md
macos/: README.md  install.sh  make-release.sh
macos/TTStation/: Package.swift
macos/TTStation/AppShell/: Info.plist  project.yml
macos/TTStation/AppShell/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/TTStation/AppShell/Assets.xcassets/MenuBarIcon.imageset/: Contents.json
macos/TTStation/AppShell/Assets.xcassets/QuietBox2.imageset/: Contents.json
macos/TTStation/AppShell/Sources/: BoxDetailView.swift  BoxHeaderView.swift  BoxRowView.swift  BoxSidebarView.swift  BoxWorkspaceView.swift  CLIInstaller.swift  CardContainer.swift  ConfigCardView.swift  ConnectCardView.swift  DeviceStripView.swift  LaunchController.swift  ManualHostSheet.swift  MenuContentView.swift  ModelBrowserView.swift  ModelPickerView.swift  PowerMenuView.swift  RunStopBar.swift  ServingCardView.swift  TTStationApp.swift  TTTheme.swift  WorkbenchCardView.swift
macos/TTStation/Sources/TTStationKit/: AppModel.swift  BinaryLocator.swift  BoxViewModel.swift  CLILinkPlanner.swift  DeviceArtwork.swift  DiscoveryService.swift  HostRegistry.swift  ModelDefaults.swift  ModelRanking.swift  Models.swift  OpenCodeLauncher.swift  OpenWebUILauncher.swift  Placeholder.swift  PowerControls.swift  ProcessRunner.swift  Provisioning.swift  RunningState.swift  ServingStatus.swift  TTClient.swift  TTError.swift  TelemetryService.swift  TelemetrySnapshot.swift  WorkbenchLaunchers.swift
macos/TTStation/Tests/TTStationKitTests/: AppModelTests.swift  BinaryLocatorTests.swift  BoxViewModelTests.swift  CLILinkPlannerTests.swift  DeviceArtworkTests.swift  DiscoveryServiceTests.swift  LaunchersTests.swift  ModelDefaultsTests.swift  ModelRankingTests.swift  ModelsTests.swift  PowerControlsTests.swift  ProcessRunnerTests.swift  ProvisioningTests.swift  RunningStateTests.swift  ServingStatusTests.swift  SkeletonTests.swift  TTClientTests.swift  TelemetrySnapshotTests.swift  WorkbenchLaunchersTests.swift
macos/TTStation/Tests/TTStationKitTests/Fixtures/: discover.json  endpoint.json  models.json  serving.json
macos/TTStation/Tests/TTStationKitTests/Support/: FakeDiscoveryService.swift  FakeProcessRunner.swift  FakeTTClient.swift  InMemoryStore.swift
scripts/: bump-version.sh
site/: deploy.sh  index.html
