[workspace]
resolver = "2"
members = ["crates/libttstation", "crates/tt", "crates/tt-station-agentd", "crates/mock-box"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mdns-sd = "0.20"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rand = "0.9"
