[workspace]
resolver = "2"
members = ["crates/libttstation", "crates/tt", "crates/tt-station-agentd", "crates/mock-box"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mdns-sd = "0.20"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rand = "0.9"
toml = "0.8"
tempfile = "3"
# `tt console`'s ratatui TUI (Task 7). Pinned to match `tt-toplike`'s own
# ratatui/crossterm versions (see its `Cargo.toml`) to avoid version drift
# within the same ecosystem of operator tools.
ratatui = "0.30"
crossterm = "0.29"
