[package]
name = "mock-box"
version.workspace = true
edition.workspace = true

[dependencies]
libttstation = { path = "../libttstation" }
anyhow = { workspace = true }
clap = { workspace = true }
mdns-sd = { workspace = true }
tokio = { workspace = true }
# `serve` (Task 12) fakes the agent control API + a fake vLLM endpoint over
# HTTP -- same axum/serde stack `tt-station-agentd` uses for the real thing,
# so the JSON shapes on the wire stay recognizable between mock and real.
# `ws` (Task 4) additionally lets `GET /telemetry` upgrade to a WebSocket and
# stream a canned `tt-smi -s` frame, mirroring `tt-station-agentd`'s real
# telemetry route so the macOS app's live device strip can be exercised with
# no hardware.
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
# Only for `pair/init`'s printed code -- cosmetic, since `pair/complete`
# accepts any code for the mock (see routes.rs doc comment).
rand = { workspace = true }
# `/ssh/authorize` (Task 4) reuses the REAL agent's pure, unit-tested
# validate/authorize/revoke core (`authkeys.rs`) instead of reimplementing
# key parsing/dedupe/permission-hardening here -- this mock only supplies a
# throwaway temp-dir path, never `~/.ssh` (see `serve`'s authorized-keys path).
tt-station-agentd = { path = "../tt-station-agentd" }
