[package]
name = "tt-station-agentd"
version = "0.0.1"
edition = "2021"

[dependencies]
libttstation = { path = "../libttstation" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mdns-sd = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
