[package]
name = "tt-station-agentd"
version = "0.0.1"
edition = "2021"

[dependencies]
libttstation = { path = "../libttstation" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mdns-sd = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }

[features]
# Compiled in for `cargo test` (see the self-dependency below) so
# integration tests can read pairing codes that would otherwise never leave
# the process. Never enabled for a normal `cargo build`/release binary.
test-hooks = []

[dev-dependencies]
reqwest = { workspace = true }
# Integration tests (crates/tt-station-agentd/tests/*.rs) link against the
# library as a separate compilation unit from the one `cargo test` builds
# for unit tests, so a plain `#[cfg(test)]` on a helper is invisible to
# them -- `cfg(test)` is only set while compiling *this* crate's own test
# harness, not downstream crates (and integration tests count as
# downstream). Depending on ourselves here, with `test-hooks` turned on,
# makes Cargo compile the lib with that feature active for every test
# target in this crate, so `tests/pairing.rs` can call `AppState::last_code`
# without agentd ever exposing it in a real build.
tt-station-agentd = { path = ".", features = ["test-hooks"] }
