[package]
name = "tt-station-agentd"
version = "0.0.1"
edition = "2021"

[dependencies]
libttstation = { path = "../libttstation" }
# `ws` on top of the workspace base so `GET /telemetry` can upgrade to a
# WebSocket and stream `tt-smi -s` snapshots (see src/telemetry.rs). Additive:
# every existing (plain HTTP) route is unaffected by enabling this feature.
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mdns-sd = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
# `blocking` on top of the workspace's `default-features = false` + `json`
# base: `DockerBackend`'s health probe (serving/docker.rs) runs from a sync
# `ServingBackend::start`, with no async runtime guaranteed to be available
# to await a request against, so it uses `reqwest::blocking` rather than the
# async client `tests/status.rs` uses elsewhere in this crate. Both APIs
# coexist fine in the same dependency -- `blocking` just adds the extra
# module, it doesn't change how the async client behaves.
reqwest = { workspace = true, features = ["blocking"] }
toml = { workspace = true }
# Box-side process listing/CPU%/mem for the `tt_toplike` telemetry
# enrichment (src/procscan.rs).
sysinfo = { workspace = true }

[features]
# Compiled in for `cargo test` (see the self-dependency below) so
# integration tests can read pairing codes that would otherwise never leave
# the process, and (Task 9) so `DockerBackend::with_health_poll` -- which
# shrinks health-poll timing for tests -- is visible to them too. Never
# enabled for a normal `cargo build`/release binary.
test-hooks = []

[dev-dependencies]
# Integration tests (crates/tt-station-agentd/tests/*.rs) link against the
# library as a separate compilation unit from the one `cargo test` builds
# for unit tests, so a plain `#[cfg(test)]` on a helper is invisible to
# them -- `cfg(test)` is only set while compiling *this* crate's own test
# harness, not downstream crates (and integration tests count as
# downstream). Depending on ourselves here, with `test-hooks` turned on,
# makes Cargo compile the lib with that feature active for every test
# target in this crate, so `tests/pairing.rs` can call `AppState::last_code`
# without agentd ever exposing it in a real build.
tt-station-agentd = { path = ".", features = ["test-hooks"] }
# WebSocket client for the `GET /telemetry` integration test
# (tests/telemetry.rs): connect to the streamed route and assert on the
# frames it pushes. `futures-util` provides the `StreamExt`/`SinkExt` the
# tokio-tungstenite stream is driven through. Dev-only -- the agent itself is
# the WS *server* (via axum's `ws` feature) and never needs a WS client.
tokio-tungstenite = "0.24"
futures-util = "0.3"
tempfile = { workspace = true }
